UCS-2936: Fixed error on Iphone 5

--- a/landings/16/css/custom.css
+++ b/landings/16/css/custom.css
@@ -150,6 +150,11 @@ html{
     text-align: center;
     outline: none;
     font-family: Montserrat, sans-serif;
+    text-decoration: none;
+}
+
+.hero__scroll-button:visited{
+    color: white;
 }
 
 .hero__scroll-button:hover{
@@ -533,12 +538,16 @@ input[type='submit']{
 }
 
 @media screen and (max-width: 375px){
+    .hero{
+        min-height: 800px;
+        height: auto;
+    }
     .hero__title{
         font-size: 32px;
     }
 
     .hero .container-cust{
-        height: 105%;
+        height: auto;
     }
 
     .second-block__lead{
@@ -556,6 +565,11 @@ input[type='submit']{
     .second-block .container-cust{
         padding-right: 10px;
         padding-left: 10px;
+    }
+
+    .hero__date-block{
+        overflow: inherit;
+        display: block;
     }
 }
 
